# kascov

./: .gitignore  Cargo.toml  README.md
contract-params/: p2pkh.json  p2pkh_spend_signed_args.json  simple_if_statement.json  simple_if_statement_hello_else_args.json  spend_outputs_template.json  transfer_with_timeout_ctor.json  transfer_with_timeout_transfer_args.json
contracts/silverscript/: openhashlock.sil  weighted_sum_vault.sil
src/: commands.rs  console.rs  main.rs  storage.rs  ui.rs
